--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -273,7 +273,6 @@
     "ensup =   TaggedCorpus(Path(\"../nlp6-data/ensup\"), tagset=entrain.tagset, vocab=entrain.vocab)  # supervised training\n",
     "endev =   TaggedCorpus(Path(\"../nlp6-data/endev\"), tagset=entrain.tagset, vocab=entrain.vocab)  # evaluation\n",
     "logging.info(f\"Tagset: f{list(entrain.tagset)}\")\n",
-    "\n",
     "known_vocab = TaggedCorpus(Path(\"../nlp6-data/ensup\")).vocab    # words seen with supervised tags; used in evaluation"
    ]
   },
@@ -286,7 +285,6 @@
     "# Initialize an HMM\n",
     "#lexicon = build_lexicon(entrain, embeddings_file=Path('../lexicons/words-50.txt'))  # works better with more attributes!\n",
     "hmm = HiddenMarkovModel.load('en_hmm.pkl')\n",
-    "\n",
     "\n",
     "#hmm = hmm.load('en_hmm.pkl')\n",
     "#hmm = hmm.load('divsup_train.pkl')\n"
@@ -301,8 +299,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "996it [00:05, 183.16it/s]\n",
-      "996it [00:03, 292.33it/s]\n"
+      "996it [00:05, 177.19it/s]\n",
+      "996it [00:03, 323.58it/s]\n"
      ]
     },
     {
@@ -339,6 +337,11 @@
    ],
    "source": [
     "# train on unsupervised\n",
+    "logger=logging.getLogger() \n",
+    "\n",
+    "#Now we are going to Set the threshold of logger to DEBUG \n",
+    "logger.setLevel(logging.INFO) \n",
+    "\n",
     "loss_dev = lambda model: model_error_rate(model, eval_corpus=endev, known_vocab=known_vocab)\n",
     "hmm.train(corpus=entrain, loss=loss_dev, minibatch_size=30, evalbatch_size=10000, lr=0.0001, reg=0,save_path='unsup_train.pkl')"
    ]
