--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "\n",
     "from eval import model_cross_entropy, tagger_write_output\n",
     "from hmm import HiddenMarkovModel\n",
+    "from crf import CRFModel\n",
     "from lexicon import build_lexicon\n",
     "import torch\n",
     "\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -93,8 +94,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +269,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Loading model from ic_crf.pkl\n",
+      "INFO:root:Loaded model from ic_crf.pkl\n",
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "The corpus that this sentence came from uses a different tagset or vocab",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22352/2896453956.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mic_crf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCRFModel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ic_crf.pkl'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmodel_error_rate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mic_crf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meval_corpus\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0micsup\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\lenovo\\Desktop\\2021 Fall\\Natural Language Processing\\hw\\tagging\\eval.py\u001b[0m in \u001b[0;36mmodel_error_rate\u001b[1;34m(model, eval_corpus, known_vocab)\u001b[0m\n\u001b[0;32m     42\u001b[0m     after printing cross-entropy and a breakdown of accuracy (using the logger).\"\"\"\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m     \u001b[0mmodel_cross_entropy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meval_corpus\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# call for side effects\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m     return tagger_error_rate(viterbi_tagger(model, eval_corpus),\n\u001b[0;32m     46\u001b[0m                              \u001b[0meval_corpus\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\lenovo\\Desktop\\2021 Fall\\Natural Language Processing\\hw\\tagging\\eval.py\u001b[0m in \u001b[0;36mmodel_cross_entropy\u001b[1;34m(model, eval_corpus)\u001b[0m\n\u001b[0;32m     30\u001b[0m         \u001b[0mtoken_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mgold\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0meval_corpus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_sentences\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m             \u001b[0mlog_prob\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_prob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meval_corpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m             \u001b[0mtoken_count\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgold\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m    \u001b[1;31m# count EOS but not BOS\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mcross_entropy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mlog_prob\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mtoken_count\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\lenovo\\Desktop\\2021 Fall\\Natural Language Processing\\hw\\tagging\\crf.py\u001b[0m in \u001b[0;36mlog_prob\u001b[1;34m(self, sentence, corpus)\u001b[0m\n\u001b[0;32m    181\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdesupervise\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    182\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 183\u001b[1;33m     \u001b[1;32mdef\u001b[0m \u001b[0mlog_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msentence\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mSentence\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mTaggedCorpus\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    184\u001b[0m         \"\"\"Run the forward algorithm from the handout on a tagged, untagged, \n\u001b[0;32m    185\u001b[0m         or partially tagged sentence.  Return log Z (the log of the forward \n",
+      "\u001b[1;32mc:\\Users\\lenovo\\Desktop\\2021 Fall\\Natural Language Processing\\hw\\tagging\\crf.py\u001b[0m in \u001b[0;36mlog_forward\u001b[1;34m(self, sentence, corpus)\u001b[0m\n\u001b[0;32m    192\u001b[0m         \u001b[0msent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_integerize_sentence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    193\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 194\u001b[1;33m         \u001b[1;31m# The \"nice\" way to construct alpha is by appending to a List[Tensor] at each\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    195\u001b[0m         \u001b[1;31m# step.  But to better match the notation in the handout, we'll instead preallocate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    196\u001b[0m         \u001b[1;31m# a list of length n+2 so that we can assign directly to alpha[j].\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\lenovo\\Desktop\\2021 Fall\\Natural Language Processing\\hw\\tagging\\crf.py\u001b[0m in \u001b[0;36m_integerize_sentence\u001b[1;34m(self, sentence, corpus)\u001b[0m\n\u001b[0;32m     95\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"The corpus that this sentence came from uses a different tagset or vocab\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 97\u001b[1;33m         \u001b[1;31m# If so, go ahead and integerize it.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     98\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mintegerize_sentence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: The corpus that this sentence came from uses a different tagset or vocab"
+     ]
+    }
+   ],
+   "source": [
+    "ic_crf = CRFModel.load('ic_crf.pkl')\n",
+    "model_error_rate(ic_crf, eval_corpus=icsup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,35 +334,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "996it [00:05, 177.19it/s]\n",
-      "996it [00:03, 323.58it/s]\n"
+      "996it [00:05, 181.28it/s]\n",
+      "INFO:root:Cross-entropy: 8.0400 nats (= perplexity 3102.636)\n",
+      "996it [00:06, 148.22it/s]\n",
+      "INFO:root:Tagging accuracy: all: 81.739%, known: 83.175%, seen: 72.391%, novel: 62.814%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.818241393932385"
+       "0.18260668439921357"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)\n",
     "model_error_rate(hmm, eval_corpus=endev, known_vocab=known_vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Loading model from en_hmm_awesome.pkl\n",
+      "INFO:root:Loaded model from en_hmm_awesome.pkl\n",
+      "996it [00:05, 179.65it/s]\n",
+      "INFO:root:Cross-entropy: 6.9604 nats (= perplexity 1054.084)\n",
+      "996it [00:04, 242.16it/s]\n",
+      "INFO:root:Tagging accuracy: all: 93.524%, known: 96.094%, seen: 67.340%, novel: 63.342%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.06476234532207703"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hmm_aw = HiddenMarkovModel.load('en_hmm_awesome.pkl')\n",
+    "model_error_rate(hmm_aw, eval_corpus=endev, known_vocab=known_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# awesome tag\n",
+    "\n",
+    "# load hmm on En data\n",
+    "# Get the corpora\n",
+    "entrain = TaggedCorpus(Path(\"../nlp6-data/ensup\"), Path(\"../nlp6-data/enraw\"), , log_counts=True)                # all training\n",
+    "ensup =   TaggedCorpus(Path(\"../nlp6-data/ensup\"), tagset=entrain.tagset, vocab=entrain.vocab, log_counts=True)  # supervised training\n",
+    "endev =   TaggedCorpus(Path(\"../nlp6-data/endev\"), tagset=entrain.tagset, vocab=entrain.vocab, log_counts=True)  # evaluation\n",
+    "logging.info(f\"Tagset: f{list(entrain.tagset)}\")\n",
+    "known_vocab = TaggedCorpus(Path(\"../nlp6-data/ensup\")).vocab    # words seen with supervised tags; used in evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,9 +521,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Read 73 tokens from icsup, icraw\n",
+      "INFO:root:Created 4 tag types\n",
+      "INFO:root:Created 6 word types\n",
+      "INFO:root:Tagset: f['C', 'H', '_EOS_TAG_', '_BOS_TAG_']\n",
+      "INFO:root:Read 40 tokens from icsup\n",
+      "INFO:root:Created 4 tag types\n",
+      "INFO:root:Created 6 word types\n"
+     ]
+    }
+   ],
    "source": [
     "# load hmm on ic data\n",
     "# Get the corpora\n",
@@ -441,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -536,10 +646,10 @@
      "evalue": "name 'icdev' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-63b10c79bbc9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# evaluation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel_error_rate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhmm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_corpus\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0micdev\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mknown_vocab\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mictrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'icdev' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22352/2198366201.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mlogger\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogging\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetLogger\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetLevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlogging\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mINFO\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmodel_error_rate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhmm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meval_corpus\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0micdev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mknown_vocab\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mictrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'icdev' is not defined"
      ]
     }
    ],
@@ -550,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -628,10 +738,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0ddf02f4c0292df6831d782027890daba6803fd8ec186dc3e6f7222b70d5e314"
+   "hash": "2db524e06e9f5f4ffedc911c917cb75e12dbc923643829bf417064a77eb14d37"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('base': conda)",
+   "display_name": "Python 3.8.1 64-bit (system)",
    "name": "python3"
   },
   "language_info": {
@@ -644,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   },
   "orig_nbformat": 4
  },
