--- a/hmm.ipynb
+++ b/hmm.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,18 +38,10 @@
       "INFO : Created 4 tag types\n",
       "INFO : Created 5 word types\n",
       "INFO : Ice cream vocabulary: ['1', '2', '3', '_EOS_WORD_', '_BOS_WORD_']\n",
-      "INFO : Ice cream tagset: ['C', 'H', '_EOS_TAG_', '_BOS_TAG_']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'lexicon'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-60104ddf64bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Ice cream tagset: {list(icsup.tagset)}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mlexicon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_lexicon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0micsup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mone_hot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# one-hot lexicon: separate parameters for each word\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mhmm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHiddenMarkovModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0micsup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtagset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0micsup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mhmm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhmm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'my_hmm.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"*** Current A, B matrices (computed by softmax from small random parameters)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'lexicon'"
+      "INFO : Ice cream tagset: ['C', 'H', '_EOS_TAG_', '_BOS_TAG_']\n",
+      "INFO : Loading model from ic_hmm.pkl\n",
+      "INFO : Loaded model from ic_hmm.pkl\n",
+      "INFO : *** Current A, B matrices (computed by softmax from small random parameters)\n"
      ]
     }
    ],
@@ -63,16 +55,42 @@
     "logging.info(f\"Ice cream vocabulary: {list(icsup.vocab)}\")\n",
     "logging.info(f\"Ice cream tagset: {list(icsup.tagset)}\")\n",
     "lexicon = build_lexicon(icsup, one_hot=True)   # one-hot lexicon: separate parameters for each word\n",
-    "hmm = HiddenMarkovModel(icsup.tagset, icsup.vocab, lexicon)\n",
-    "hmm = hmm.load('my_hmm.pkl')\n",
+    "hmm = HiddenMarkovModel.load('ic_hmm.pkl')\n",
     "logging.info(\"*** Current A, B matrices (computed by softmax from small random parameters)\")\n",
-    "#hmm.updateAB()   # compute the matrices from the initial parameters (this would normally happen during training).\n",
-    "                 # An alternative is to set them directly to some spreadsheet values you'd like to try.\n",
-    "# hmm.A = torch.Tensor([[0.8, 0.1,0.1,0],[0.1,0.8,0.1,0],[0,0,0,0],[0.5, 0.5,0,0]])\n",
-    "# hmm.B = torch.Tensor([[0.7, 0.2,0.1],[0.1,0.2,0.7],[0,0,0],[0,0,0]])\n",
-    "hmm.printAB()\n",
+    "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transition matrix A:\n",
+      "\tC\tH\t_EOS_TAG_\t_BOS_TAG_\n",
+      "C\t0.883\t0.110\t0.007\t0.000\n",
+      "H\t0.110\t0.883\t0.007\t0.000\n",
+      "_EOS_TAG_\t0.333\t0.333\t0.333\t0.000\n",
+      "_BOS_TAG_\t0.484\t0.484\t0.031\t0.000\n",
+      "\n",
+      "Emission matrix B:\n",
+      "\t1\t2\t3\n",
+      "C\t0.696\t0.200\t0.105\n",
+      "H\t0.105\t0.200\t0.696\n",
+      "_EOS_TAG_\t0.000\t0.000\t0.000\n",
+      "_BOS_TAG_\t0.000\t0.000\t0.000\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "hmm.printAB()"
    ]
   },
   {
